--- a/works/index.html
+++ b/works/index.html
@@ -1,5 +1,6 @@
 ---
-layout: page
+permalink: /
+layout: portfolio-index
 status: publish
 published: true
 title: Games + Art
@@ -19,3 +20,4 @@ tags: []
 comments: []
 ---
 
+Works content
