--- a/_posts/2011-07-27-the-back-burner-zero-gravity-movement-game-prototype.html
+++ b/_posts/2011-07-27-the-back-burner-zero-gravity-movement-game-prototype.html
@@ -113,7 +113,7 @@ comments:
     pay for an upgrade?
 ---
 <p>I'd like to show off some projects of mine that are currently on the back burner, to avoid them from gathering too much dust. :)</p>
-<p>[embed]http://www.youtube.com/watch?v=D-UT8Vfok1E[/embed]</p>
+<iframe width="540" height="405" src="https://www.youtube-nocookie.com/embed/D-UT8Vfok1E?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <p>Here is a video of a game prototype I was working on in UDK. My idea is to express the feeling of being in zero gravity in a way that hasn't been done in games before (i.e. no jetpack.) You move by pushing yourself along surfaces and kicking off them towards other surfaces. Once airborne, you can't alter your velocity without grabbing on or bumping in to something (or possibly throwing stuff out of your pockets.) I hope someday to make a real game from this concept.</p>
 <p>I reflect on this prototype, why it went to the back burner, and what I learned after the jump.</p>
 <p><!--more--></p>
