--- a/learning/index.html
+++ b/learning/index.html
@@ -17,6 +17,7 @@ date_gmt: '2011-08-19 07:31:44 +0000'
 categories: []
 tags: []
 comments: []
+published: false
 ---
 <p>Just a little page to keep track of skills, programming languages, technologies, etc. that I'm learning, with approximate start dates of active pursuit.</p>
 <p><strong>Concentrating on</strong></p>
