add itch.io link, fix some dead links, add some missing portfolio pages

--- a/_works/combo.html
+++ b/_works/combo.html
@@ -19,6 +19,7 @@ tags: []
 comments: []
 portfolio:
   download: 'http://globalgamejam.org/2015/games/combo'
+  website: '<a href="https://github.com/fadookie/ggj2015">GitHub</a>'
   event: '<a href="http://globalgamejam.nl/">Global Game Jam Netherlands 2015</a>'
   time: 48 Hours
   team: '5'
