--- a/_works/drift.html
+++ b/_works/drift.html
@@ -30,7 +30,8 @@ portfolio:
   media:
     - type: text
       value: Text paragraph test
-  download: 'http://www.ludumdare.com/compo/ludum-dare-22/?uid=8628'
+  download: 'https://eliot.s3.amazonaws.com/releases/games/ld48/ld22/LD22_Alone_01_7352c71.zip'
+  website: '<a href="https://eliot.s3.amazonaws.com/releases/games/ld48/ld22/Drift.source.zip">Source Code</a>'
   event: '<a href="http://www.ludumdare.com/compo/ludum-dare-22/">Ludum Dare 22</a>'
   time: 48 hours
   team: Solo
