--- a/works/index.html
+++ b/works/index.html
@@ -3,7 +3,7 @@ permalink: /
 layout: portfolio-index
 status: publish
 published: true
-title: Games + Art
+title: Portfolio
 author:
   display_name: eliot
   login: eliot
