template tweaks, add more missing GitHub links, add Minecraft page

--- a/_works/bass-jumper.html
+++ b/_works/bass-jumper.html
@@ -18,7 +18,8 @@ categories: []
 tags: []
 comments: []
 portfolio:
-  event: '<a href="http://www.whammyjammy.org/">Whammy Jammy 2012</a>'
+  event: '<a href="https://web.archive.org/web/20121013214816/https://www.whammyjammy.org/">Whammy Jammy 2012</a>'
+  website: '<a href="https://github.com/fadookie/BeatStomp">GitHub (Client)</a>, <a href="https://github.com/fadookie/WHMY_Sensor">GitHub (Accelerometer)</a>'
   time: 48 hours
   team: '6'
   role: 'Programmer, electrical engineer'
