--- a/_works/game-visualizer-1.html
+++ b/_works/game-visualizer-1.html
@@ -18,6 +18,7 @@ categories: []
 tags: []
 comments: []
 portfolio:
+  website: '<a href="https://github.com/fadookie/GameVisualizer1">GitHub</a>'
   role: Programmer
   technologies: >-
     Unity, C#, Orthello 2D Framework, Exocortex DSP Library, OSCulator,
