--- a/_works/raney2.html
+++ b/_works/raney2.html
@@ -20,7 +20,7 @@ comments: []
 portfolio:
   play: 'http://gamejolt.com/games/other/raney2/45350/'
   event: >-
-    <a href="http://jams.gamejolt.io/musicvideogamejam/games">Music Video(game)
+    <a href="https://web.archive.org/web/20160313063558/http://jams.gamejolt.io/musicvideogamejam">Music Video(game)
     Jam 2014</a>
   time: 1 week
   team: '1'
