categorize all portfolio pages

--- a/_works/3d-zero-gravity-prototype.html
+++ b/_works/3d-zero-gravity-prototype.html
@@ -14,7 +14,7 @@ wordpress_id: 824
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=824'
 date: '2011-07-27 07:08:18 +0000'
 date_gmt: '2011-07-27 14:08:18 +0000'
-categories: []
+categories: ['Games', 'Personal']
 tags: []
 comments: []
 portfolio:
