--- a/_works/animatedgraf.html
+++ b/_works/animatedgraf.html
@@ -14,7 +14,7 @@ wordpress_id: 803
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=803'
 date: '2012-05-03 12:48:05 +0000'
 date_gmt: '2012-05-03 19:48:05 +0000'
-categories: []
+categories: ['Art', 'Personal', 'Featured']
 tags: []
 comments: []
 portfolio:
