--- a/_works/bass-jumper.html
+++ b/_works/bass-jumper.html
@@ -14,7 +14,7 @@ wordpress_id: 813
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=813'
 date: '2012-11-11 14:52:48 +0000'
 date_gmt: '2012-11-11 22:52:48 +0000'
-categories: []
+categories: ['Games', 'Personal', 'Hardware', 'Featured']
 tags: []
 comments: []
 portfolio:
