--- a/_works/combo.html
+++ b/_works/combo.html
@@ -14,7 +14,7 @@ wordpress_id: 884
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=884'
 date: '2015-01-25 06:59:48 +0000'
 date_gmt: '2015-01-25 14:59:48 +0000'
-categories: []
+categories: ['Games', 'Personal', 'Featured']
 tags: []
 comments: []
 portfolio:
