--- a/_works/drift.html
+++ b/_works/drift.html
@@ -14,7 +14,7 @@ wordpress_id: 601
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=601'
 date: '2011-12-19 03:37:07 +0000'
 date_gmt: '2011-12-19 11:37:07 +0000'
-categories: []
+categories: ['Games', 'Personal']
 tags: []
 comments: []
 portfolio:
