--- a/_works/goldrunner.html
+++ b/_works/goldrunner.html
@@ -14,7 +14,7 @@ wordpress_id: 672
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=672'
 date: '2011-04-16 01:55:42 +0000'
 date_gmt: '2011-04-16 08:55:42 +0000'
-categories: []
+categories: ['Games', 'Personal']
 tags: []
 comments: []
 portfolio:
