--- a/_works/oddsmos.html
+++ b/_works/oddsmos.html
@@ -14,7 +14,7 @@ wordpress_id: 676
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=676'
 date: '2011-11-06 02:00:02 +0000'
 date_gmt: '2011-11-06 10:00:02 +0000'
-categories: []
+categories: ['Games', 'Personal']
 tags: []
 comments: []
 portfolio:
