--- a/_works/pge.html
+++ b/_works/pge.html
@@ -14,7 +14,7 @@ wordpress_id: 685
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=685'
 date: '2011-05-19 02:40:54 +0000'
 date_gmt: '2011-05-19 09:40:54 +0000'
-categories: []
+categories: ['Games', 'Personal']
 tags: []
 comments: []
 portfolio:
