--- a/_works/twities.html
+++ b/_works/twities.html
@@ -14,7 +14,7 @@ wordpress_id: 821
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=821'
 date: '2012-08-16 04:17:03 +0000'
 date_gmt: '2012-08-16 11:17:03 +0000'
-categories: []
+categories: ['Art', 'Personal']
 tags: []
 comments: []
 portfolio:
