--- a/_works/unforbidden-planetoid.html
+++ b/_works/unforbidden-planetoid.html
@@ -14,7 +14,7 @@ wordpress_id: 660
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=660'
 date: '2012-06-10 00:58:44 +0000'
 date_gmt: '2012-06-10 07:58:44 +0000'
-categories: []
+categories: ['Games', 'Personal', 'Featured']
 tags: []
 comments: []
 portfolio:
