--- a/_works/assage.html
+++ b/_works/assage.html
@@ -14,7 +14,7 @@ wordpress_id: 674
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=674'
 date: '2011-08-20 02:00:43 +0000'
 date_gmt: '2011-08-20 09:00:43 +0000'
-categories: []
+categories: ['Games', 'Personal']
 tags: []
 comments: []
 portfolio:
