--- a/_works/game-visualizer-1.html
+++ b/_works/game-visualizer-1.html
@@ -14,7 +14,7 @@ wordpress_id: 815
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=815'
 date: '2013-03-02 16:59:26 +0000'
 date_gmt: '2013-03-03 00:59:26 +0000'
-categories: []
+categories: ['Games', 'Visuals', 'Personal', 'Featured']
 tags: []
 comments: []
 portfolio:
