--- a/_works/maestro.html
+++ b/_works/maestro.html
@@ -14,7 +14,7 @@ wordpress_id: 669
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=669'
 date: '2012-04-01 01:52:12 +0000'
 date_gmt: '2012-04-01 08:52:12 +0000'
-categories: []
+categories: ['Games', 'Personal', 'Featured']
 tags: []
 comments: []
 portfolio:
