--- a/_works/raney2.html
+++ b/_works/raney2.html
@@ -14,7 +14,7 @@ wordpress_id: 881
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=881'
 date: '2015-01-18 06:50:07 +0000'
 date_gmt: '2015-01-18 14:50:07 +0000'
-categories: []
+categories: ['Games', 'Personal', 'Featured']
 tags: []
 comments: []
 portfolio:
