--- a/_works/shatter.html
+++ b/_works/shatter.html
@@ -14,7 +14,7 @@ wordpress_id: 680
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=680'
 date: '2012-03-10 02:11:36 +0000'
 date_gmt: '2012-03-10 10:11:36 +0000'
-categories: []
+categories: ['Games', 'Personal', 'Art']
 tags: []
 comments: []
 portfolio:
