--- a/_works/sumogons.html
+++ b/_works/sumogons.html
@@ -14,7 +14,7 @@ wordpress_id: 682
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=682'
 date: '2012-03-08 02:14:02 +0000'
 date_gmt: '2012-03-08 10:14:02 +0000'
-categories: []
+categories: ['Games', 'Personal', 'Featured']
 tags: []
 comments: []
 portfolio:
