--- a/portfolio/all.html
+++ b/portfolio/all.html
@@ -1,9 +1,9 @@
 ---
-permalink: /
 layout: portfolio-index
 status: publish
 published: true
-title: Portfolio
+title: Portfolio (All)
+exclude_nav: true
 author:
   display_name: eliot
   login: eliot
@@ -16,7 +16,7 @@ wordpress_url: http://www.eliotlash.com/?page_id=589
 date: '2012-01-01 02:32:57 +0000'
 date_gmt: '2012-01-01 10:32:57 +0000'
 categories: []
-selected_category: 'Featured'
+selected_category: 'All'
 tags: []
 comments: []
 ---
