set up noscript navigation for category filters on portfolio

--- a/_works/live-music-visuals.html
+++ b/_works/live-music-visuals.html
@@ -14,7 +14,7 @@ wordpress_id: 834
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=834'
 date: '2013-06-26 02:26:32 +0000'
 date_gmt: '2013-06-26 09:26:32 +0000'
-categories: ['Visuals', 'Personal', 'Featured']
+categories: ['Live Visuals', 'Personal', 'Featured']
 tags: []
 comments: []
 portfolio:
