--- a/_works/triggerboy.html
+++ b/_works/triggerboy.html
@@ -14,7 +14,7 @@ wordpress_id: 807
 wordpress_url: 'http://www.eliotlash.com/?post_type=portfolio&#038;p=807'
 date: '2012-09-28 13:37:55 +0000'
 date_gmt: '2012-09-28 20:37:55 +0000'
-categories: ['Hardware', 'Visuals', 'Personal', 'Featured']
+categories: ['Hardware', 'Live Visuals', 'Personal', 'Featured']
 tags: []
 comments: []
 portfolio:
