--- a/portfolio/visuals.html
+++ b/portfolio/visuals.html
@@ -14,7 +14,7 @@ author_email: fadookie@gmail.com
 date: '2012-01-01 02:32:57 +0000'
 date_gmt: '2012-01-01 10:32:57 +0000'
 categories: []
-selected_category: 'Visuals'
+selected_category: 'Live Visuals'
 tags: []
 comments: []
 ---
